fix index right side white space and footer margin padding

--- a/www/style/main-page.scss
+++ b/www/style/main-page.scss
@@ -697,7 +697,7 @@ AKTUELLT
     }
   }
   .aktuellt-article {
-    width: 400px;
+    //width: 400px;
     margin: 20px 20px;
     padding: 20px 20px;
     background-color: #e3ede8;
@@ -757,12 +757,15 @@ footer {
     h4 {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
       font-weight: 500;
-      font-size: 18px;
-      margin-bottom: 10px;
+      //font-size: 1.4rem;
+      //line-height: 1.5;
+      //margin-top: 8px;
     }
     
     .footer-section {
-      
+      //margin-left: 20px;
+
+
       width: 300px;
       a {
         text-decoration: none;
@@ -777,9 +780,11 @@ footer {
     height: 100px;
     background-color: #101010;
     color: white;
+    padding: 0 20px;
+    margin-bottom: 20px;
   }
 }
 
 .footer-section + .footer-section {
-  margin-left: 20px;
+  /*margin-left: 20px;*/
 }
